cabal-version:   3.16
name:            brainfetch
version:         0.1.0.0
license:         NONE
author:          pgattic
maintainer:      pgattic@gmail.com
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

executable brainfetch
    import:           warnings
    main-is:          Main.hs
    other-modules:    Interp, Memory, Parser
    build-depends:    base ^>=4.20.2.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010
